Fixed oddly large gap.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -188,8 +188,8 @@ figcaption {
     padding-bottom: 2rem;
 }
 
-.section_larger_space {
-    margin-top: 6rem;
+.section_no_color {
+    margin-top: 2rem;
 }
 
 .flex {
